# signify-ts

./: .gitignore  docker-compose.yaml  package-lock.json  package.json  publish.sh
.github/workflows/: main.yml  publish.yml
config/: keria.json
keria/: Dockerfile  README.md  pyproject.toml
src/keri/app/: contacting.ts  credentialing.ts  exchanging.ts
test-integration/: credentials.test.ts  multisig-holder.test.ts  multisig-vlei-issuance.test.ts  multisig.test.ts  singlesig-vlei-issuance.test.ts  test-setup-single-client.test.ts
test-integration/utils/: multisig-utils.ts  test-util.ts
test/app/: credentialing.test.ts  exchanging.test.ts  grouping.test.ts
